# w0rld

./: Cargo.toml  README.md
demo/: room.blend  room.glb
src/: lib.rs  plugin.rs  processor.rs  renderer.rs
src/plugin/: filter.rs  mixer2.rs  mixer3.rs  source.rs
src/renderer/: plugins.rs  w0rld.rs
src/renderer/plugins/: app.rs  offscreen.rs  scene.rs
w0rld_filter/: Cargo.toml
w0rld_filter/src/: lib.rs
w0rld_mixer2/: Cargo.toml
w0rld_mixer2/src/: lib.rs
w0rld_mixer3/: Cargo.toml
w0rld_mixer3/src/: lib.rs
w0rld_source/: Cargo.toml
w0rld_source/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
